# MachineYukonSolitaire

./: .gitignore  CMakeLists.txt  Card.c  Card.h  Cardpile.c  Cardpile.h  Commands.c  Commands.h  Definitions.h  GUI.c  GUI.h  GameInitialization.c  GameInitialization.h  GameUI.c  GameUI.h  Main.c  MemoryManagement.c  MemoryManagement.h  README.md
